--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "package": "npm run build && electron-builder --win --x64"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.14",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/dompurify": "^3.0.5",
-    "bcryptjs": "^3.0.3",
-    "dompurify": "^3.3.0",
-    "lucide-react": "^0.544.0",
-    "playwright": "^1.57.0",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
-    "recharts": "^3.5.0"
+    "@tailwindcss/postcss": "4.1.14",
+    "@types/bcryptjs": "2.4.6",
+    "@types/dompurify": "3.0.5",
+    "bcryptjs": "3.0.3",
+    "dompurify": "3.3.0",
+    "lucide-react": "0.544.0",
+    "playwright": "1.57.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
+    "recharts": "3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
